fixed - layout issues

--- a/src/components/content-section/style.styl
+++ b/src/components/content-section/style.styl
@@ -24,20 +24,6 @@
       float right
       margin 16rem -2rem 0 2rem
 
-  &__expander
-    display none
-
-    ~ .c-content-section__content
-      display none
-
-    &:checked
-      ~ .c-content-section
-        &__trigger
-          display none
-
-        &__content
-          display block
-
   &__trigger
     color $color-brand
     padding 0 1rem
